tests/fixtures/invalid/missing_in_context.sr
rule "EQ: Missing In" underlying:
    when true:
        then emit_signal(kind="BUY")

